--- a/PortalAnimation/index.html
+++ b/PortalAnimation/index.html
@@ -35,8 +35,6 @@
     </div>
     <!--<script type="text/javascript" src="http://visionmedia.github.io/move.js/build/build.js"></script>-->
     <script type="text/javascript" src="build.js"></script>
-    <script src="js/stats.min.js"></script>
-    <script src="js/proton-1.0.0.min.js"></script>
     <script>
 
         var move = require('move');
@@ -52,9 +50,11 @@
         var gravity;
 
         var globalOffset = -300;
-        //var bubblePositions = [[100, 100, 44, '#009e49'], [200, 200, 44, '#ffb700'], [300, 300, 44, '#692079']];
 
+        /** BUBBLES GO HERE **/
         var bubblePositions = [[234, 190, 80, '#ffb700'], [184, 223, 112, '#0171c5'], [187, 317, 56, '#009e49'], [296, 169, 65, '#00bbf2'], [347, 188, 43, '#bad709'], [397, 190, 29, '#692079'], [195, 379, 70, '#da1658'], [203, 359, 35, '#692079'], [214, 448, 47, '#bad709'], [252, 468, 40, '#692079'], [276, 491, 28, '#ffb700'], [318, 497, 72, '#692079'], [373, 468, 107, '#0171c5'], [450, 394, 112, '#da1658'], [505, 320, 53, '#00bbf2'], [474, 235, 28, '#bad709'], [429, 203, 59, '#009e49'], [478, 246, 65, '#ffb700'], [526, 295, 20, '#da1658'], [487, 308, 23, '#009e49'], [534, 384, 28, '#da1658'], [483, 366, 34, '#ffb700'], [429, 460, 46, '#009e49'], [620, 171, 64, '#692079'], [651, 221, 50, '#bad709'], [705, 261, 17, '#ffb700'], [728, 345, 36, '#bad709'], [687, 267, 32, '#bad709'], [703, 286, 43, '#692079'], [720, 304, 54, '#0171c5'], [750, 363, 37, '#da1658'], [778, 407, 23, '#bad709'], [773, 389, 19, '#da1658'], [769, 224, 42, '#692079'], [768, 272, 41, '#0171c5'], [774, 333, 23, '#692079'], [770, 301, 33, '#00bbf2'], [775, 358, 25, '#ffb700'], [638, 333, 22, '#da1658'], [627, 391, 47, '#00bbf2'], [624, 352, 61, '#bad709'], [645, 282, 19, '#00bbf2'], [575, 210, 25, '#da1658'], [590, 195, 29, '#ffb700'], [752, 475, 41, '#00bbf2'], [736, 458, 29, '#009e49'], [735, 572, 22, '#00bbf2']];
+
+        /************************/
 
         Main();
         function Main() {
@@ -141,97 +141,6 @@
 
         /***********************************************************************************************/
 
-        function addStats() {
-            stats = new Stats();
-            stats.setMode(2);
-            stats.domElement.style.position = 'absolute';
-            stats.domElement.style.left = '0px';
-            stats.domElement.style.top = '0px';
-            document.getElementById('container').appendChild(stats.domElement);
-        }
-
-        function loadImage_old() {
-            var image = new Image()
-            image.onload = function (e) {
-                var rect = new Proton.Rectangle((canvas.width - e.target.width) / 2, (canvas.height - e.target.height) / 2, e.target.width, e.target.height);
-                context.drawImage(e.target, rect.x, rect.y);
-                createProton(rect);
-                tick();
-            }
-            image.src = 'image/one.png'; //image/logo.png';
-        }
-
-        function createProton(rect) {
-            proton = new Proton;
-            emitter = new Proton.Emitter();
-            //setRate
-            emitter.rate = new Proton.Rate(new Proton.Span(11, 15), new Proton.Span(.02));
-            //addInitialize
-            emitter.addInitialize(new Proton.Position(new Proton.PointZone(0, 0)));
-            emitter.addInitialize(new Proton.Mass(1));
-            emitter.addInitialize(new Proton.Radius(6, 10));
-            emitter.addInitialize(new Proton.Life(2));
-            var imagedata = context.getImageData(rect.x, rect.y, rect.width, rect.height);
-            emitter.addInitialize(new Proton.P(new Proton.ImageZone(imagedata, rect.x, rect.y + 50)));
-            //addBehaviour
-
-            randomBehaviour = new Proton.RandomDrift(2, 2, .2);
-            gravity = new Proton.Gravity(0);
-            emitter.addBehaviour(customScaleBehaviour());
-            emitter.addBehaviour(gravity);
-            emitter.addBehaviour(randomBehaviour);
-            emitter.addBehaviour(new Proton.Color(['#00aeff', '#0fa954', '#54396e', '#e61d5f']));
-            emitter.addBehaviour(new Proton.CrossZone(new Proton.RectZone(0, 0, canvas.width, canvas.height), 'collision'));
-            emitter.emit();
-            //add emitter
-            proton.addEmitter(emitter);
-
-            //canvas renderer
-            renderer = new Proton.Renderer('canvas', proton, canvas);
-            renderer.start();
-
-            //debug
-            //Proton.Debug.drawEmitter(proton, canvas, emitter);
-
-            index = 0;
-            window.addEventListener('mousedown', function (e) {
-                index++;
-                if (index % 3 == 1) {
-                    randomBehaviour.reset(2, 0, .2);
-                    gravity.reset(1.5);
-                } else if (index % 3 == 2) {
-                    randomBehaviour.reset(50, 50, .1);
-                    gravity.reset(0);
-                } else {
-                    randomBehaviour.reset(2, 2, .2);
-                    gravity.reset(0);
-                }
-            });
-        }
-
-        function customScaleBehaviour() {
-            return {
-                initialize: function (particle) {
-                    particle.oldRadius = particle.radius;
-                    particle.scale = 0;
-                },
-                applyBehaviour: function (particle) {
-                    if (particle.energy >= 2 / 3) {
-                        particle.scale = (1 - particle.energy) * 3;
-                    } else if (particle.energy <= 1 / 3) {
-                        particle.scale = particle.energy * 3;
-                    }
-                    particle.radius = particle.oldRadius * particle.scale;
-                }
-            }
-        }
-
-        function tick() {
-            requestAnimationFrame(tick);
-            stats.begin();
-            proton.update();
-            stats.end();
-        }
 		</script>
 </body>
 </html>
