--- a/PortalAnimation/index.html
+++ b/PortalAnimation/index.html
@@ -52,7 +52,7 @@
         var globalOffset = -300;
 
         /** BUBBLES GO HERE **/
-        var bubblePositions = [[234, 190, 80, '#ffb700'], [184, 223, 112, '#0171c5'], [187, 317, 56, '#009e49'], [296, 169, 65, '#00bbf2'], [347, 188, 43, '#bad709'], [397, 190, 29, '#692079'], [195, 379, 70, '#da1658'], [203, 359, 35, '#692079'], [214, 448, 47, '#bad709'], [252, 468, 40, '#692079'], [276, 491, 28, '#ffb700'], [318, 497, 72, '#692079'], [373, 468, 107, '#0171c5'], [450, 394, 112, '#da1658'], [505, 320, 53, '#00bbf2'], [474, 235, 28, '#bad709'], [429, 203, 59, '#009e49'], [478, 246, 65, '#ffb700'], [526, 295, 20, '#da1658'], [487, 308, 23, '#009e49'], [534, 384, 28, '#da1658'], [483, 366, 34, '#ffb700'], [429, 460, 46, '#009e49'], [620, 171, 64, '#692079'], [651, 221, 50, '#bad709'], [705, 261, 17, '#ffb700'], [728, 345, 36, '#bad709'], [687, 267, 32, '#bad709'], [703, 286, 43, '#692079'], [720, 304, 54, '#0171c5'], [750, 363, 37, '#da1658'], [778, 407, 23, '#bad709'], [773, 389, 19, '#da1658'], [769, 224, 42, '#692079'], [768, 272, 41, '#0171c5'], [774, 333, 23, '#692079'], [770, 301, 33, '#00bbf2'], [775, 358, 25, '#ffb700'], [638, 333, 22, '#da1658'], [627, 391, 47, '#00bbf2'], [624, 352, 61, '#bad709'], [645, 282, 19, '#00bbf2'], [575, 210, 25, '#da1658'], [590, 195, 29, '#ffb700'], [752, 475, 41, '#00bbf2'], [736, 458, 29, '#009e49'], [735, 572, 22, '#00bbf2']];
+        var bubblePositions = [[349, 102, 44, '#da1658'], [359, 197, 38, '#bad709'], [364, 392, 96, '#009e49'], [717, 433, 20, '#bad709'], [836, 185, 20, '#da1658'], [594, 127, 117, '#da1658'], [539, 294, 88, '#ffb700'], [685, 444, 46, '#bad709'], [861, 427, 19, '#692079'], [883, 285, 70, '#da1658'], [824, 263, 68, '#00bbf2'], [730, 399, 26, '#692079'], [997, 536, 21, '#ffb700'], [1035, 367, 65, '#692079'], [1056, 349, 37, '#00bbf2']];
 
         /************************/
 
@@ -92,6 +92,7 @@
             var bubbleId = 'bubble_' + index;
 
             var str = '<div id=' + bubbleId + ' style="width:' + radius + 'px;height:' + radius + 'px;border-radius:' + radius + 'px;background:' + color + ';position:absolute;top:' + top + 'px; left: ' + left + 'px;"></div>';
+
             $('.canvas').append(str);
 
             //bubblePositions[index] = new Array(2);
